--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+}
+
+.workspace {
+  font-family: "Ubuntu Mono", monospace;
+  max-width: 35rem;
+  line-height: 1.5rem;
+  color: rgb(166, 166, 166);
+}
+
+.workspace .correct {
+  color: rgb(30, 30, 30);
+}
+
+.workspace .incorrect {
   color: white;
+  background-color: rgb(141, 0, 0);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.workspace .current {
+  border-bottom: 2px solid;
 }
