--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 .App {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+.App header,
+.App footer {
+  padding: 3em;
+  font-size: 0.75em;
+  max-width: 35rem;
+}
+
+.App footer {
+  text-align: right;
 }
 
 .workspace {
