--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+body {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,15 +6,21 @@
   height: 100vh;
 }
 
+.App {
+  font-family: "Ubuntu Mono", monospace;
+}
+
 .App header,
 .App footer {
-  padding: 3em;
+  padding: 3em 0;
   font-size: 0.75em;
   max-width: 35rem;
 }
 
 .App footer {
   text-align: right;
+  align-self: flex-end;
+  white-space: pre-wrap;
 }
 
 .workspace {
